--- a/style.css
+++ b/style.css
@@ -32,3 +32,16 @@ header {
 footer {
     background: lightsalmon;
 }
+
+/* CSS GRID Practice */
+.phrases {
+  display: flex;
+  grid-template-columns: 50% 50%;
+  grid-gap: 3px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.phrase {
+  border: 1px solid black;
+}
